Fix: Correcting Header alignment

--- a/src/app/ui/components/header/header.component.scss
+++ b/src/app/ui/components/header/header.component.scss
@@ -2,6 +2,7 @@
 @import 'fonts';
 
 p {
+  text-align: center;
   font-size: $h2-fz;
   color: $color2;
 }
